<!--
  ~ Copyright (C) 2022 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">HappyDay</string>
    <string name="ok_action">OK</string>
    <string name="save_action">Save</string>
    <string name="save">Save</string>
    <string name="cancel_action">Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="change_date">Change Date</string>
    <string name="rHabitEntryDialog">track habits</string>
    <string name="rDiaryEntryEdit">add Diary entry</string>
    <string name="rDiaryEntryView">view Diary</string>
    <string name="diary_entry_for_myself">What have I done for myself?</string>
    <string name="diary_entry_for_others">What have I done for others?</string>
    <string name="diary_entry_unexpressed_emotions">What unexpressed emotions was I holding?</string>
    <string name="diary_entry_something_good">List 1–3 good things that happened</string>
    <string name="diary_entry_anticipation">What are you looking forward to tomorrow?</string>
    <string name="diary_entry_abstinent">Did I stay abstinent?</string>
    <string name="diary_entry_exercised">Have I exercised?</string>
    <string name="diary_entry_mood">Mood</string>
    <string name="diary_entry_date">Date</string>
    <string name="calendar_button_content_description">Open Calendar Day Selector</string>
</resources>
